--- a/src/SportsRentalManagement.Application/SportsRentalManagement.Application.csproj
+++ b/src/SportsRentalManagement.Application/SportsRentalManagement.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SportsRentalManagement.Domain\SportsRentalManagement.Domain.csproj" />
   </ItemGroup>
 
